Version 1.3.9.8
09/27/2021, Bing Li

Now the version is compiled with JDK 11.

The underlying environment is upgraded from JDK 8 to JDK 11 from now on.

The current lines of code are 206369.

The number of files is 3092.